# JNIDev

./: .gitignore  README-cmake.md  README-常见加密算法.md  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  jni.jks
app/arm7/release/: app-arm7-release.apk  output.json
app/src/androidTest/java/com/ebrightmoon/jni/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/ebrightmoon/jnidev/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Crypto.cpp  base64.c  calculator.c  crypto.c  crypto.cpp  encrypt-util.hpp  encrypt.c  jni_tool.cpp  jni_tool.hpp  main.cpp  main.hpp  native-lib.cpp
app/src/main/cpp/calculator/: CMakeLists.txt
app/src/main/cpp/crypto/: CMakeLists.txt  DES.cpp  DEStable.h  DSS.cpp  RSA.cpp  Vigenere.cpp  base64.h  calculator.c  common-define.hpp  crypto.c  des.c  jni_tool.cpp
app/src/main/java/com/ebrightmoon/jni/: CalculatorActivity.java  EncryActivity.java  HomeActivity.java  JNIApplication.java  MainActivity.java  ProxyApplication.java
app/src/main/java/com/ebrightmoon/jni/calculator/: Calculator.java
app/src/main/java/com/ebrightmoon/jni/crypto/: Crypto.java  JNITool.java
app/src/main/java/com/ebrightmoon/jni/encrypt/: AESCrypt.java  Base64Util.java  Base64Utils.java  DESCrypt.java  DESUtils.java  MD5.java  RSA.java  RSAHelper.java
app/src/main/java/com/ebrightmoon/jni/shell/: AndroidXmlUtils.java  ApkShellUtils.java  ApkToolUtils.java  CmdExecutor.java  Constant.java  DexFile.java  FileUtils.java  LogUtils.java  RefInvoke.java  SecurityUtils.java  ShellApplication.java  ShellTool.java  SignUtils.java
app/src/main/java/com/ebrightmoon/jni/sun/misc/: BASE64Decoder.java  BASE64Encoder.java  CEFormatException.java  CEStreamExhausted.java  (+2 more)
app/src/main/java/com/ebrightmoon/jni/test/: Main.java
app/src/main/java/com/ebrightmoon/jni/unshell/: ShellApplication.java  ShellTool.java
app/src/main/java/com/ebrightmoon/jni/utils/: DebugUtil.java  DensityUtils.java  RefInvoke.java  Robot.java  RootCheck.java  ShellApplication.java  ShellTool.java  SignCheck.java
app/src/main/java/com/ebrightmoon/jni/view/: CustomView.java  CustomWidgetView.java
app/src/main/java/com/ebrightmoon/jnidev/: MainActivity.java
app/src/main/java/com/ebrightmoon/jnidev/crypto/: Crypto.java
app/src/main/java/com/ebrightmoon/jnidev/encrypt/: Base64Util.java  Base64Utils.java  RSA.java  RSAHelper.java
app/src/main/java/com/ebrightmoon/jnidev/page/: CustomViewActivity.java
app/src/main/java/com/ebrightmoon/jnidev/utils/: DensityUtils.java
app/src/main/java/com/ebrightmoon/jnidev/view/: CustomView.java  CustomWidgetView.java
app/src/main/res/drawable/: bg_crypt_shape.xml
app/src/main/res/layout/: activity_calculator.xml  activity_home.xml  activity_main.xml  activity_view.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/ebrightmoon/jni/: ExampleUnitTest.java
app/src/test/java/com/ebrightmoon/jnidev/: ExampleUnitTest.java
demo/: app-arm7-debug.apk  app-debug.apk
gradle/wrapper/: gradle-wrapper.properties
